<resources>
    <string name="app_name">RSS</string>
    <string name="sports1">Michael Phelps, the most decorated Olympian of all time</string>
    <string name="sports2">Sachin Tendulkar Turns Chef on New Year Eve</string>
    <string name="sports3">Roger Federer the spring-loaded chicken puts fish oil in all our joints</string>
    <string name="entertainment1">Bigg Boss 11 Jan 6 written update: Salman Khan promises Akash that he’d get beaten up and forgotten</string>
    <string name="entertainment2">‘Padmavati’ to release as ‘Padmavat’ on January 25 </string>
    <string name="entertainment3">Tiger Zinda Hai box office collection Day 18: Salman-Katrina film is rock steady</string>
    <string name="technology1">Analyst says iPhone X sales are ‘worse-than-expected,’ downgrades key Apple supplier</string>
    <string name="technology2">Samsung Running Out Of Time To Gamble On Risky Galaxy S8 Launch</string>
    <string name="technology3">Xiaomi Mi A1 Android 8.0 Oreo update: Notification dots, picture-in-picture, fast charging and all the top features</string>
    <string name="politics1">2017 in Indian politics: BJP continues dominance, midnight dramas abound, neech politics prove a distraction</string>
    <string name="politics2"> Rahul Gandhi hints at big changes, promises shining new Congress in six months </string>
    <string name="politics3">  Indian superstar Rajinikanth tells fans he is entering politics </string>
    <string name="sports11">
        Michael Fred Phelps II[5] (born June 30, 1985)[6] is an American retired competitive swimmer and the most successful and most decorated Olympian of all time,[7] with a total of 28 medals. Phelps also holds the all-time records for Olympic gold medals (23),[8] Olympic gold medals in individual events (13), and Olympic medals in individual events (16).[9] When he won eight gold medals at the 2008 Beijing Games, Phelps broke fellow American swimmer Mark Spitz 1972 record of seven first-place finishes at any single Olympic Games. At the 2004 Summer Olympics in Athens, Phelps had already tied the record of eight medals of any color at a single Games by winning six gold and two bronze medals. At the 2012 Summer Olympics in London, Phelps won four gold and two silver medals, and at the 2016 Summer Olympics in Rio de Janeiro, he won five gold medals and one silver. This made him the most successful athlete of the Games for the fourth Olympics in a row.[10][11]
    </string>
    <string name="sports12">Tendulkar received the Arjuna Award in 1994 for his outstanding sporting achievement, the Rajiv Gandhi Khel Ratna award in 1997, India highest sporting honour, and the Padma Shri and Padma Vibhushan awards in 1999 and 2008, respectively, India fourth and second highest civilian awards.[11] After a few hours of his final match on 16 November 2013, the Prime Minister Office announced the decision to award him the Bharat Ratna, India highest civilian award.[12][13] He is the youngest recipient to date and the first ever sportsperson to receive the award.[14][15] He also won the 2010 Sir Garfield Sobers Trophy for cricketer of the year at the ICC awards.[16] In 2012, Tendulkar was nominated to the Rajya Sabha, the upper house of the Parliament of India.[17] He was also the first sportsperson and the first person without an aviation background to be awarded the honorary rank of group captain by the Indian Air Force.[18] In 2012, he was named an Honorary Member of the Order of Australia.[19][20]

    </string>
    <string name="sports13"> Roger Federer (German pronunciation: [ˈrɔdʒər ˈfeːdərər]; born 8 August 1981) is a Swiss professional tennis player who is currently ranked world No. 2 in men singles tennis by the Association of Tennis Professionals (ATP).[2][3] Federer has won 19 Grand Slam singles titles, the most in history for a male tennis player and has held the world No. 1 spot in the ATP rankings for a record total of 302 weeks, including a record 237 consecutive weeks. After turning professional in 1998, he was continuously ranked in the top ten from October 2002 to November 2016. He re-entered the top ten through his victory at the 2017 Australian Open.

In majors, he has won a record eight Wimbledon titles, five Australian Open titles, a record five consecutive US Open titles and one French Open title. He is among eight men to have captured a career Grand Slam and has reached a record 29 men's singles Grand Slam finals, including ten in a row from the 2005 Wimbledon Championships to the 2007 US Open. Given these achievements, many players and analysts consider Federer the greatest tennis player of all time.[a] </string>
<string name="entertainment11"> Bigg Boss is a reality show based on the original Dutch Big Brother format developed by John de Mol. A number of contestants (known as "housemates") live in a purpose-built house and are isolated from the rest of the world. Each week, housemates nominate two of their peers for eviction, and the housemates who receives the most nominations would face a public vote. Of these, one would eventually leave, having been "evicted" from the House. However, there were exceptions to this process as dictated by Bigg Boss. In the final week, there were three housemates remaining, and the public voted for who they wanted to win. The housemates in the Indian version are primarily celebrities with the exception of one who is a non-celebrity selected via auditions. Housemates are overseen by a mysterious person known as 'Bigg Boss', whose only presence in the house is through his voice.[1]

  </string>
    <string name="entertainment12"> Bigg Boss is a reality show based on the original Dutch Big Brother format developed by John de Mol. A number of contestants (known as "housemates") live in a purpose-built house and are isolated from the rest of the world. Each week, housemates nominate two of their peers for eviction, and the housemates who receives the most nominations would face a public vote. Of these, one would eventually leave, having been "evicted" from the House. However, there were exceptions to this process as dictated by Bigg Boss. In the final week, there were three housemates remaining, and the public voted for who they wanted to win. The housemates in the Indian version are primarily celebrities with the exception of one who is a non-celebrity selected via auditions. Housemates are overseen by a mysterious person known as 'Bigg Boss', whose only presence in the house is through his voice.[1]

 </string>
    <string name="entertainment13"> Tiger Zinda Hai 2017 Movie Free Download 720p BluRay R.A.W specialist Tiger a.k.a. Avinash Singh Rathore has been repudiated by his organization. At the point when regular citizens are set in damages way, Tiger is gotten back to enthusiastically for an incomprehensible mission where he should secretly fight a universal fear based oppressor organisation.Salman Khan has two huge discharges arranged in 2017, in Kabir Khan’s “Tubelight” and Ali Abbas Zafar’s ‘Tiger Zinda Hai,’ by chance a continuation of Kabir’s ‘Ek Tha Tiger’.The genius has been going the additional mile to idealize the two characters.The last mentioned, particularly, has Sallu rejoining with his supposed previous fire, Katrina Kaif, who had likewise been a piece of the prequel.R.A.W specialist Tiger a.k.a. Avinash Singh Rathore has been repudiated by his organization. At the point when regular citizens are set in damages way, Tiger is gotten back to enthusiastically for an incomprehensible mission where he should secretly fight a universal fear based oppressor organisation.Salman Khan has two huge discharges arranged in 2017, in Kabir Khan’s “Tubelight” and Ali Abbas Zafar’s ‘Tiger Zinda Hai,’ by chance a continuation of Kabir’s ‘Ek Tha Tiger’.Sallu will be seen brandishing an all around prepared whiskers in the film, much in a state of harmony with the topic of the undercover work thriller.The film, delivered by Aditya Chopra, has been in the news, much cordiality the tremendous notoriety of the main portion. </string>
<string name="technology11"> iPhone X ("X" pronounced "ten" /tɛn/)[9] is a smartphone designed, developed, and marketed by Apple Inc. It was announced on September 12, 2017, alongside the iPhone 8 and iPhone 8 Plus at the Steve Jobs Theater in the Apple Park campus. The phone was released on November 3, 2017. This iPhone marks the device tenth anniversary, with "X" being the symbol for "ten" in Roman numerals.
    The iPhone X is intended to showcase what Apple thinks is technology of the future, specifically adopting OLED screen technology for the first time in iPhone history, as well as using a glass and stainless-steel form factor, offering wireless charging, and removing the home button in favor of introducing Face ID, a new authentication method using advanced technologies to scan the user face to unlock the device, as well as for the use of animated emojis called Animoji. The new, nearly bezel-less form factor marks a significant change to the iPhone user interaction, involving swipe-based gestures to navigate around the operating system rather than the typical home button used in every previous iteration of the iPhone lineup. At the time of its November 2017 launch, its price tag of US$999 also made it the most expensive iPhone ever, with even higher prices internationally due to additional local sales and import taxes. </string>
<string name="technology12"> The Samsung Galaxy S8, Samsung Galaxy S8+ (shortened to S8 and S8+, respectively) and Samsung Galaxy S8 Active are Android smartphones produced by Samsung Electronics as part of the Samsung Galaxy S series. The S8 and S8+ were unveiled on 29 March 2017 and directly succeed the Samsung Galaxy S7 and S7 Edge, with a North American release on 21 April 2017 and international rollout throughout April and May. The S8 Active was announced on 8 August 2017, and is exclusive to certain U.S. cellular carriers.
    The S8 and S8+ contain upgraded hardware and major design changes over the S7 line, including larger screens with a taller aspect ratio and curved sides on both the smaller and larger models, iris and face recognition, a new suite of virtual assistant features known as Bixby (along with a new dedicated physical button for launching the assistant), and Samsung DeX, a docking station accessory that allows the phones to be used with a desktop interface with keyboard and mouse input support. The S8 Active features tougher materials designed for protection against shock, shatter, water and dust, with a metal frame and a rugged, tough texture for improved grip. The Active's screen measures the same size as the standard S8 model, but loses the curved edges in favor of a metal frame. </string>
<string name="technology13">  Mi A1 comes with a 5.5" touchscreen display with Full HD 1080p resolution, powered by a 3080 mAh battery. It measures 155.40 x 75.80 x 7.30 (height x width x thickness) and weighs 168.00 grams. The phone is powered by an 2.0 GHz Octa-core Qualcomm Snapdragon 625 processor with Adreno 506 GPU and comes with 4GB of RAM. It has an internal storage of 64GB and unique for the series, microSD card slot supporting up to 128 GB cards. The rear camera on the Mi A1 is 12 + 12 megapixel shooter with auto focus and 2x optical lossless zoom, it is capable of recording 4K videos, the phone also has a 5 megapixel front camera. Sensors on the phone include compass magnetometer, proximity sensor, accelerometer, ambient light sensor and gyroscope,fingerprint sensor[4]</string>
</resources>