<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.immense.rss.Homepage">
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TableRow
            android:id="@+id/tr1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

               <ImageView
                   android:layout_width="100dp"
                   android:layout_height="50dp"
                   android:src="@drawable/sports1"
                   />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sports1"/>
            </LinearLayout>

        </TableRow>


        <TableRow
            android:id="@+id/tr2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:src="@drawable/sports2"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sports2"/>
            </LinearLayout>

        </TableRow>

        <TableRow
            android:id="@+id/tr3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:src="@drawable/sports3"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sports3"/>
            </LinearLayout>

        </TableRow>






        <TableRow
            android:id="@+id/tr4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:src="@drawable/entertainment1"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/entertainment1"/>
            </LinearLayout>

        </TableRow>


        <TableRow
            android:id="@+id/tr5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:src="@drawable/entertainment2"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/entertainment2"/>
            </LinearLayout>

        </TableRow>

        <TableRow
            android:id="@+id/tr6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:src="@drawable/entertainment3"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/entertainment3"/>
            </LinearLayout>

        </TableRow>


        <TableRow
            android:id="@+id/tr7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:src="@drawable/technology1"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/technology1"/>
            </LinearLayout>

        </TableRow>


        <TableRow
            android:id="@+id/tr8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:src="@drawable/technology2"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/technology2"/>
            </LinearLayout>

        </TableRow>

        <TableRow
            android:id="@+id/tr9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:src="@drawable/technology3"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/technology3"/>
            </LinearLayout>

        </TableRow>




        <TableRow
            android:id="@+id/tr10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:src="@drawable/politics1"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/politics1"/>
            </LinearLayout>

        </TableRow>


        <TableRow
            android:id="@+id/tr11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:src="@drawable/politics2"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/politics2"/>
            </LinearLayout>

        </TableRow>

        <TableRow
            android:id="@+id/tr12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:src="@drawable/politics3"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/politics3"/>
            </LinearLayout>

        </TableRow>

    </TableLayout>

</ScrollView>
