<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.immense.rss.Homepage">
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <TableRow
        android:id="@+id/tr4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:src="@drawable/entertainment1"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/entertainment1"/>
        </LinearLayout>

    </TableRow>


    <TableRow
        android:id="@+id/tr5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:src="@drawable/entertainment2"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/entertainment2"/>
        </LinearLayout>

    </TableRow>

    <TableRow
        android:id="@+id/tr6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:src="@drawable/entertainment3"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/entertainment3"/>
        </LinearLayout>

    </TableRow>
    </TableLayout>
</ScrollView>

